fix WeatherModal position on mobile

--- a/src/components/assets/weather-modal.scss
+++ b/src/components/assets/weather-modal.scss
@@ -3,6 +3,7 @@
 
   .modal-dialog {
     width: 350px;
+    margin: 0 auto;
   }
 
   .modal-content {
